[gd_scene load_steps=11 format=3 uid="uid://c8co8d2l51l1a"]

[ext_resource type="FontFile" uid="uid://drlaam1m0qyt5" path="res://Asset/press-start.regular.ttf" id="1_2r4rj"]
[ext_resource type="Script" path="res://MainMenu.gd" id="1_mnxra"]
[ext_resource type="FontFile" uid="uid://1t5dfymf6vqc" path="res://Asset/lunchds.ttf" id="2_3kndi"]
[ext_resource type="Script" path="res://Level/LevelSelect.gd" id="3_r7hpe"]
[ext_resource type="PackedScene" uid="uid://dtqs7taxsputk" path="res://Prefab/level_2.tscn" id="4_ugro2"]
[ext_resource type="PackedScene" uid="uid://bac70lr5l61kv" path="res://Level/level_4.tscn" id="5_81foe"]
[ext_resource type="PackedScene" uid="uid://618t3fyxsgfq" path="res://Level/level_5.tscn" id="6_bfspl"]
[ext_resource type="PackedScene" uid="uid://3u8qukqi4567" path="res://Level/level_6.tscn" id="7_43bfs"]
[ext_resource type="PackedScene" uid="uid://b8kslufrfaycy" path="res://Level/level_7.tscn" id="8_nt552"]
[ext_resource type="PackedScene" uid="uid://bhqdj33cjou27" path="res://Level/level_8.tscn" id="9_2pp32"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mnxra")

[node name="LevelSelect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = -62.0
offset_right = 195.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="LevelSelect/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2r4rj")
theme_override_font_sizes/font_size = 41
text = "Levels
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="LevelSelect/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="LevelSelect/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="Button" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "1"
script = ExtResource("3_r7hpe")
level = ExtResource("4_ugro2")

[node name="Button2" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "2"
script = ExtResource("3_r7hpe")
level = ExtResource("5_81foe")

[node name="Button3" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "3"
script = ExtResource("3_r7hpe")
level = ExtResource("6_bfspl")

[node name="Button4" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "4"
script = ExtResource("3_r7hpe")
level = ExtResource("7_43bfs")

[node name="Button5" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "5
"
script = ExtResource("3_r7hpe")
level = ExtResource("8_nt552")

[node name="Button6" type="Button" parent="LevelSelect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 3
text = "6
"
script = ExtResource("3_r7hpe")
level = ExtResource("9_2pp32")

[node name="MainMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -128.5
offset_right = 188.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="MainMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2r4rj")
theme_override_font_sizes/font_size = 41
text = "Temple of"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.96875, 0.703125, 0.308594, 1)
theme_override_fonts/font = ExtResource("2_3kndi")
theme_override_font_sizes/font_size = 141
text = "S'klar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(20, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2r4rj")
theme_override_font_sizes/font_size = 31
text = "Start"

[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button" to="LevelSelect/VBoxContainer/GridContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button2" to="LevelSelect/VBoxContainer/GridContainer/Button2" method="_on_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button3" to="LevelSelect/VBoxContainer/GridContainer/Button3" method="_on_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button4" to="LevelSelect/VBoxContainer/GridContainer/Button4" method="_on_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button5" to="LevelSelect/VBoxContainer/GridContainer/Button5" method="_on_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer/GridContainer/Button6" to="LevelSelect/VBoxContainer/GridContainer/Button6" method="_on_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Button" to="." method="_on_button_pressed"]
